--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   http: ^1.4.0
   another_flushbar: ^1.12.30
   provider: ^6.1.5
+  shared_preferences: ^2.5.3
+  get_it: ^8.0.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
